pridana Sunny od Bobbyho Hebba, Horkyze slize a upravena Hani, aby se mohla hrat i na svatbe.

--- a/tp-songs/04_tp/Josef____Hani.tex
+++ b/tp-songs/04_tp/Josef____Hani.tex
@@ -31,9 +31,9 @@ I love you
 \ks
 
 \zs
-Hani, díky tobě o svatbě přemítám
+Hani, díky tobě ženáč teďka jsem
 
-Hani, ještě včera chtěl jsem býti sám
+Hani, už scházet nebudem se za lesem
 
 Ty dny jsou ty tam, dnes kapky nepolykám
 
@@ -45,7 +45,7 @@ I love you
 \ks
 
 \zs
-Hani, slunce mé i když si Mráčková
+Hani, slunce mé byla's Mráčková
 
 Hani, předpověď nám snad přízeň zachová
 
