Drobné opravy akordů a slov

--- a/tp-songs/01_folk/Asonance____Čarodějnice_z_Amesbury.tex
+++ b/tp-songs/01_folk/Asonance____Čarodějnice_z_Amesbury.tex
@@ -63,7 +63,7 @@ a před ďáblovým učením budeš se na pozoru mít!}
 \ks
 
 \zs
-Zuzana stála hrdě s hlavou hrdě vztyčenou
+Zuzana stála krásná s hlavou hrdě vztyčenou
 
 a její slova zněla klenbou s tichou ozvěnou:
 
