--- a/tp-songs/02_pop_rock/Olympic____Želva.tex
+++ b/tp-songs/02_pop_rock/Olympic____Želva.tex
@@ -5,7 +5,7 @@
 \zs
 <G>Ne moc <C>snadno se <G>želva <C>po dně <G>honí, <C> <G> <C>
 
-<G>velmi <C>radno je <G>plavat <C>na dno za <G>ní, <C> <G> <C>
+<G>velmi <C>radno je <G>plavat <C>na dno za <G>ní, <C> <G>
 
 jenom <D>počkej, až se zeptá, na to, <Emi>co tě v mozku lechtá,
 
