nove pisne TPBANDU

--- a/tp-songs/02_pop_rock/Horkyze_slize____Nazdar.tex
+++ b/tp-songs/02_pop_rock/Horkyze_slize____Nazdar.tex
@@ -75,6 +75,18 @@ všetkých nás prehladali, nehovor, že nepamätáš.
 \ks
 
 \zs
+(solo)
+\ks
+
+\zs
+(solo)
+
+Nazdar!
+
+Nazdar!
+\ks
+
+\zs
 A barman aj s jeho prázdnou buksou 
 
 zareval: Dofajčíme dopijeme záverečná! 
