--- a/tp-songs/03_zahranicni/Eva_Cassidy____Wade_in_the_Water.tex
+++ b/tp-songs/03_zahranicni/Eva_Cassidy____Wade_in_the_Water.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Wade in the Water}{Eva Cassidy}
+\zp{Smoke on the Water}{Eva Cassidy}
 
 \zr
 \Ch{Bm7}{}  \Ch{G#}{wade} in the \Ch{F#7}{water} \Ch{F}{}
@@ -9,7 +9,7 @@
 
 \Ch{Bm7}{}  \Ch{G#}{wade in the} \Ch{F#7}{water} \Ch{F}{oh}
 
-God's gonna trouble the wa\Ch{Fadd#9}{ter}
+<Ebm>God's gonna trouble the wa\Ch{F}{ter}
 \kr
 
 \zs
@@ -23,6 +23,14 @@ God's gonna trouble the water
 \ks
 
 \zr\kr
+
+\zs
+(sólo - saxofon)
+\ks
+
+\zr
+(sólo - saxofon)
+\kr
 
 \zs
 Who's that young girl dressed in white?
