--- a/tp-songs/03_zahranicni/Police___Every_breath_you_take.tex
+++ b/tp-songs/03_zahranicni/Police___Every_breath_you_take.tex
@@ -27,13 +27,13 @@ I'll be watching you
 \ks
 
 \zr
-O can't you see
+O can't you <G>see
 
-You belong to me
+You belong to <D>me
 
-Oh my poor heart aches 
+Oh my poor heart <E>aches 
 
-with every step you take
+with every step you <A>take
 \kr
 
 \zs
