--- a/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
+++ b/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
@@ -44,6 +44,33 @@ I'd have to pack my things and go (that's right!)
 \zr
 \kr
 
+\zs
+Kolik je smutného, když mraky černé jdou,
+
+lidem nad hlavou, smutnou dálavou, já slyšel
+
+příběh, který velkou pravdu měl, za čas odletěl,
+
+každý zapomněl.
+\ks
+
+\zr
+\kr
+
+\zs
+Měl kapsu prázdnou Franky dlouhán,
+
+po státech toulal se jen sám. A že byl 
+
+veselej tak každej měl ho rád, tam ruce
+
+k dílu mlčky přiloží a zase jede dál
+
+a každej kdo s ním chvilku byl, tak
+
+dlouho se pak smál.
+\ks
+
 \zr
 \kr
 
