--- a/tp-songs/04_tp/Josef____Hani.tex
+++ b/tp-songs/04_tp/Josef____Hani.tex
@@ -23,7 +23,7 @@ Hani, s tebou mě už sníh tak netrýzní
 
 Bez tebe, prožívám zatmění
 
-Na tom se nic nezmění
+Na tom se už nic nezmění
 
 Hani, hvězdo snů
 
@@ -37,7 +37,7 @@ Hani, už scházet nebudem se za lesem
 
 Ty dny jsou ty tam, dnes kapky nepolykám
 
-před tebou dveře nezamykám
+před tebou už dveře nezamykám
 
 Hani, hvězdo snů
 
@@ -47,7 +47,7 @@ I love you
 \zs
 Hani, slunce mé byla's Mráčková
 
-Hani, předpověď nám snad přízeň zachová
+Hani, předpověď nám přízeň zachová
 
 deštník dnes už neberu si
 
