--- a/tp-songs/02_pop_rock/Lucie____Šrouby_do_hlavy.tex
+++ b/tp-songs/02_pop_rock/Lucie____Šrouby_do_hlavy.tex
@@ -61,7 +61,7 @@ jak žhavej drát.
 Zná jen pár fíglů,
 jak se valej holkám šrouby do hlavy.
 
-pár známejch fíglů,
+Pár známejch fíglů,
 <D>já tu ve tmě házím
 
 <A7>zapálený sirky do trá<Emi>vy.
