--- a/tp-songs/02_pop_rock/Miro_Žbirka____Čo_bolí_to_prebolí.tex
+++ b/tp-songs/02_pop_rock/Miro_Žbirka____Čo_bolí_to_prebolí.tex
@@ -13,9 +13,9 @@ Dvaja blázni <Gmi>na mori, <A7>niekto nám veslo <Dmi>vzal.
 \ks
 
 \zr
-Tie tajomst<C>vá<F> pod hladi<A7>nou<Dmi>
+Tie tajomst<F>vá<C> pod hladi<A7>nou<Dmi>
 
-chcem v tebe <C>ná<F>jsť, ale s i<A7>nou.<Dmi> 
+chcem v tebe <F>ná<C>jsť, ale s i<A7>nou.<Dmi> 
 \kr
 
 \zs
