Plíhalova UM opravena a přidána do výběru

--- a/tp-songs/01_folk/Karel_Plíhal____Plíhalova_univerzální_melodie.tex
+++ b/tp-songs/01_folk/Karel_Plíhal____Plíhalova_univerzální_melodie.tex
@@ -5,41 +5,47 @@
 \zs
 <D>Zahraju vám <Emi>teďka pouze <D>na<A7>krát<D>ko,
 že Karel tady <Emi>ztratil svoje <D>tr<A7>sát<D>ko,
+
 <A>až ho najde, <E7>budem hráti <A>dá<E7><A>le,
 <D>ten koncert <Emi>měl teď trochu <D>na<A7>má<D>le.
 \ks
 
 \zs
 Za komunistů se špatně nežilo,
-v létě bylo vedro v zimě sněžilo,
-zjara ledy tály byly povodně,
-to jste milé děti přišly o hodně.
+v létě bylo vedro, v zimě sněžilo,
+
+zjara ledy tály, byly povodně,
+to jste, milé děti, přišly o hodně.
 \ks
 
 \zs
 Soused Pepa na zahradě kozu měl,
 velmi si s ní po všech stránkách rozuměl,
+
 já zas nosím podprsenky Lenčiny,
 a proto neodsuzuj sexuální menšiny.
 \ks
 
 \zs
 Benzínem se nemá hasit ohniště,
-teď už je to jedno ale pro příště,
-slíbili mi tady místní hasiči,
+teď už je to jedno, ale pro příště.
+
+Slíbili mi tady místní hasiči,
 že to se mnou po koncertě nacvičí.
 \ks
 
 \zs
-V pizzérii v dost veliké opici,
+V pizzerii v dost veliké opici,
 vyblil jsem se sousedovi do pizzy,
-obohatil jsem tu pizzu souseda,
+
+obohatil jsem tu pizzu souseda
 o pár oliv z nedělního oběda.
 \ks
 
 \zs
-Lívie řve Václav slzy prolévá,
+Lívie řve, Václav slzy prolévá,
 kormidlo se zase točí doleva,
+
 počkáme až čtyři roky prolétnou,
 pak zase půjdem zvonit s klíči na Letnou.
 \ks
@@ -47,20 +53,23 @@ pak zase půjdem zvonit s klíči na Letnou.
 \zs
 Domorodci na Pobřeží slonoviny,
 posílaj si ráno slony pro noviny,
+
 když je cestou ztratí hloupí slonové,
 musí zpátky do trafiky pro nové.
 \ks
 
 \zs
 Každý večer stejně znova žasneme,
-kam se světlo schová vŽdy když zhasneme,
-včera bylo u morčete v bedničce,
+kam se světlo schová vždy, když zhasneme.
+
+Včera bylo u morčete v bedničce,
 dneska jsme ho našli zmrzlé v ledničce.
 \ks
 
 \zs
 Strýček bydlí v obci jménem Milotín,
 na půdě má zbytky starých gilotin.
+
 Sám si jednu po večerech opravím,
 pak se na ní jako první popravím.
 \ks
@@ -68,6 +77,7 @@ pak se na ní jako první popravím.
 \zs
 Empiricky zjistil jsem, že fakticky
 v sále sedí pouze holky mystický.
+
 Odkládají tuhle svojí mystiku
 vždycky jenom při jídle a při styku.
 \ks
@@ -75,13 +85,15 @@ vždycky jenom při jídle a při styku.
 \zs
 Do puberty přijde každé malé děcko,
 neposlouchaj, furt se hádaj, vědí všecko.
+
 Kamarádů spoustu, vy jste vedlejší,
-a přesto nemyslete na to, když jste v nejlepším.
+a přesto nemyslete na to, když jste \rlap{v nejlepším.}
 \ks
 
 \zs
 Za Husáka žádné stávky nebyly,
 zavřeli by všecky, i ty debily.
+
 Zato dneska stávkujeme o sto šest,
 nejsou žádné prachy, zato práci čest!
 \ks
