Fixed and renamed some songs making Travis fail (all from c044f8f)

--- a/tp-songs/02_pop_rock/Richard_Müller____Neuč_vtáka_lietať.tex
+++ b/tp-songs/02_pop_rock/Richard_Müller____Neuč_vtáka_lietať.tex
@@ -2,37 +2,54 @@
 
 \zp{Neuč vtáka lietať}{Richard Müller}
 
-<D>, <G>, <D>, <G>, <C>, <G>, <A> <D>Keď nemáš chlapa, tak prosím nech sa <G>páči
+<D> <G> <D> <G> <C> <G> <A> <D>
+\zs
+Keď nemáš chlapa, tak prosím nech sa <G>páči
+
 <D>Keď hľadáš blázna, zavolať ma <G>stačí
+
 <D>Keď nemáš prachy, hneď na teba sa <G>mračím
+
 <D>Keď hľadáš lásku, kto pri tebe <G>kľačí
 \ks
 
 \zr
 <C>No predsa ja, <G>obraz tvojho <D>sveta
+
 <C>No predsa ja, <G>tvoj muž i tvoje <D>dieťa
+
 <C>Á, <G>á, neuč vtáka <D>lietať
+
 <C>Á, <G>á, <A>á ..
 \kr
 
 \zs
 Keď hľadáš pomoc hneď nasadzujem chvaty
+
 Keď nemáš teplo vyzlečiem aj šaty.
 \ks
 
 \zr
 <D>Neuč vtáka <C>lietať to sa <G>nehodí<A> 
+
 <D>Ovládam ťa <C>dobre aj <G>sám<A>
+
 <D>Neuč vtáka <C>lietať to nie je <G>pre ľudí<A> 
+
 <C>Iba jedna <G>veta neuč vtáka <D>lietať
+
 <C>Iba jedna <G>veta neuč vtáka <D>lietať
+
 <C>Iba jedna <G>veta neuč vtáka <A>lietať
 \kr
 
 \zs
 Keď hľadáš kľúče, tuším kde je zámok
+
 Keď nemáš rozum, chytím občas amok
+
 Keď nemáš ticho pokojne sa stratím
+
 Keď hľadáš seba tak sa zasa vrátim
 \ks
 
