TP2020: doladění výběru, poslední drobné opravy písniček

--- a/tp-songs/01_folk/Jarek_Nohavica____Až_to_se_mnu_sekne.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Až_to_se_mnu_sekne.tex
@@ -58,6 +58,7 @@ bo rum nemuže uškodit, když pije se s rozumem, to bude pěkne.
 \ks
 
 \zr\kr
+\goodbreak
 
 \zs
 Já vim, že, Bože, nejsi, ale kdybys třeba byl, tak
