--- a/tp-songs/01_folk/Karel_Plíhal____Plíhalova_univerzální_melodie.tex
+++ b/tp-songs/01_folk/Karel_Plíhal____Plíhalova_univerzální_melodie.tex
@@ -36,7 +36,7 @@ Slíbili mi tady místní hasiči,
 \ks
 
 \zs
-V pizzerii v dost veliké opici,
+V pizzerii v dost veliké opici
 vyblil jsem se sousedovi do pizzy,
 
 obohatil jsem tu pizzu souseda
