--- a/tp-songs/01_folk/Michal_Tučný____Pověste_ho_vejš.tex
+++ b/tp-songs/01_folk/Michal_Tučný____Pověste_ho_vejš.tex
@@ -2,7 +2,7 @@
 
 \zp{Pověste ho vejš}{Michal Tučný}
 
-Na dnešek jsem měl divnej sen: slunce pálilo a před salónem stál v prachu dav, v~tvářích cejch očekávání.
+Na dnešek jsem měl divnej sen: slunce pálilo a před saloonem stál v prachu dav, v~tvářích cejch očekávání.
 Uprostřed šibenice z hrubých klád.
 Šerifův pomocník sejmul odsouzenci z hlavy kápi a dav zašuměl překvapením.
 I já jsem zašuměl překvapením: ten odsouzenec jsem byl já
