--- a/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
+++ b/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
@@ -52,6 +52,7 @@ It doesn't matter which you heard:
 The holy or the broken Hallelujah
 \ks
 \zr \kr
+\goodbreak
 \zs
 I did my best, it wasn't much
 
