--- a/tpcb/template.tex
+++ b/tpcb/template.tex
@@ -6,6 +6,9 @@
 \documentclass[11pt,a4paper%
   \ifdefined\ONESIDE,oneside\fi%
 ]{book}
+\usepackage[textwidth=6.25in,textheight=10in,
+  outer=1.4in,top=0.91in,
+  headheight=0.51in,headsep=0.2in]{geometry}
 
 \usepackage{fontspec}
 \usepackage{index}
@@ -81,7 +84,7 @@
 % Makra pro vkládání celých PDF (přední a zadní obálka)
 \newcounter{insertCur}
 \newcounter{insertTotal}
-\newcommand\insertPage[2]{\shipout\vbox to 29.7cm{\vss\hbox to 21cm{\hss{\XeTeXpdffile #1 page #2 }\hss}\vss}\stepcounter{page}}
+\newcommand\insertPage[2]{{\hoffset=-1in\voffset=-1in\shipout\vbox to 29.7cm{\vss\hbox to 21cm{\hss{\XeTeXpdffile #1 page #2 }\hss}\vss}\stepcounter{page}}}
 \newcommand\countPages[1]{\setcounter{insertTotal}{\XeTeXpdfpagecount #1 }}
 \newcommand\insertPDF[1]{\countPages{#1}\stepcounter{insertTotal}
   \forloop{insertCur}{1}{\value{insertCur} < \value{insertTotal}}{%
