Větší písmo v názvu písničky

--- a/tpcb/songbook.sty
+++ b/tpcb/songbook.sty
@@ -91,7 +91,7 @@
   \selectfont}                                  % =cmssm12 at 14.4pt
 \newcommand{\CpyRtFont}{\footnotesize}          % = cmr10  at 10pt
 \newcommand{\CpyRtInfoFont}{\tiny}              % = cmss8  at  8pt
-\newcommand{\STitleFont}{\large\bf\sf}          % = cmss12 at 14.4pt
+\newcommand{\STitleFont}{\LARGE\bf\sf}          % = cmss12 at 22pt
 \newcommand{\STitleKeyFont}{\large}             % = cmr12  at 14.4pt
 \font\STNFont=cmtt12 at 20pt
 \newcommand{\STitleNumberFont}{\STNFont}        % = cmtt12 at 20pt
