--- a/tp-songs/01_folk/Fleret____Zafúkané.tex
+++ b/tp-songs/01_folk/Fleret____Zafúkané.tex
@@ -7,16 +7,16 @@
 \zs
 <Ami>Větr sněh <Ami2>zanésl z <Ami>hor do <Ami2>polí,
 
-<Ami>já idu <C>přes kopce, <G>přes údolí, <Ami>
+<Ami>já idu <C>přes kopce, <G>přes údo<Ami>lí,
 
 <C>idu k tvej <G>dědině zatúla<C>nej,
 
-<F>cestičky sně<C>hem sú <E>zafúkané.
-<Ami> <Ami2> <Ami> <Ami2>
+<F>cestičky <C>sněhem sú <E>zafúka<Ami>né.
+<Ami2> <Ami> <Ami2>
 \ks
 
 \zr
-<Ami>Zafúk<C>ané, <G>zafúka<C>né,
+<Ami>Zafúka<C>né, <G>zafúka<C>né,
 
 <F>kolem mňa <C>všecko je <Dmi>zafúka<E>né.
 
@@ -51,7 +51,7 @@ aj na mé stopy -- sú zafúkané.
 \ks
 
 \zr
-/: Ale zafúkané, zafúkané, okénko k tobě je zafúkané. :/
+/: Zafúkané, zafúkané, mé stopy k tobě sú zafúkané. :/
 \kr
 
 
