--- a/tp-songs/01_folk/Josef_Zíma____Zelený_pláně.tex
+++ b/tp-songs/01_folk/Josef_Zíma____Zelený_pláně.tex
@@ -7,7 +7,7 @@
 
 <Ami>znám plno <Dmi>vůní, co <C>dejchám je tak <G>rád,
 
-<F>čpí tam pot <G>koní a <C>voní tymi<Ami>án,
+<F>čpí tam pot <G>koní a <C>voní tymi<A7>án,
 
 <Dmi>kouř obzor <G>cloní, jak <C>dolinou je <E>hnán,
 
