--- a/tp-songs/01_folk/Vojtěch_Tomáško____Toulavej.tex
+++ b/tp-songs/01_folk/Vojtěch_Tomáško____Toulavej.tex
@@ -39,7 +39,7 @@ je to fajn, vždyť přece zpívá, třeba smutně, Toulavej.
 \zs
 Vím, že jednou někdo přijde, tiše pískne: \uv{No tak jdem,}
 
-známí kluci ruku stisknou, řekno: \uv{Vítej, Toulavej.}
+známí kluci ruku stisknou, řeknou: \uv{Vítej, Toulavej.}
 \ks
 
 \zs
